# glib

./: .gitignore  CMakeLists.txt  ClassWindow.cpp  ClassWindow.h  Event.cpp  Event.h  README.md  TODO.md  Widget.cpp  Widget.h  buildlib.bat  cmakerun.bat  glib.c  glib.cpp  glib.h  glib_old.cpp  glib_techdoc_en.md  libdebug.bat
Include/: openme.txt
Include/glib/: ClassWindow.h  Event.h  Widget.h  glib.h  glib.lib  glib_api.h
Include/glib/structures/: body.h  size.h  structs.h
Include/glib/widget/: Button.h  Frame.h  Widget.h
Include/nwind/: nwind.h  nwind.lib
glib/lib/: glib.lib
glib/src/: ClassWindow.cpp  Event.cpp  Timer.cpp  Widget.cpp
lib/: glib.h  memory.h  winwindow.h
structures/: WindowEntry.h  position.h  rectangle.h  structs.h
